--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,56 @@
-<h1>Soon</h1>
+<header class="sticky top-0 h-0 z-50">
+  <div class="absolute py-14 w-full bg-blanc blur-3xl"></div>
+    <div class="flex flex-wrap gap-56 relative">
+      <a href="#top" class="desktop:w-1/12 desktop:scale-50 phone:scale-100 phone:w-1/5 phone:mt-2 phone:ml-2 desktop:mt-0 desktop:ml-0 hover:animate-pulse"><img src="../assets/marwin-logo.svg"></a>
+      <div class="desktop:hidden flex mt-7 scale-110">
+        <!-- <a href="#About"><button><img src="../assets/down-chevron.png" alt=""></button></a> -->
+      </div>
+
+
+      <div class="flex pt-10 gap-96">
+             
+        <!-- MENU PC -->
+        <nav>
+          <div class="desktop:flex hidden -mt-2 gap-96">
+
+
+            
+              <!--  -->
+            <ul class="flex gap-10 pt-5 rounded-full">
+
+              
+                <div class="group relative">
+                  <a href="#About" class="z-20"><li class="ml-4 z-20"><p class="z-20 relative opacity-60 group-hover:opacity-100 duration-200 group-hover:font-bold">À propos</p></li></a>
+                  <div class="flex justify-center"><div class="group-hover:w-full w-0 duration-500 bg-jaune h-1 rounded-lg ml-4 "></div></div>
+                </div>  
+                <div class="group relative">
+                  <a href="#Projets" class="z-20"><li class="ml-4 z-20"><p class="z-20 relative opacity-60 group-hover:opacity-100 duration-200 group-hover:font-bold">Projets</p></li></a>
+                  <div class="flex justify-center"><div class="group-hover:w-full w-0 duration-500 bg-jaune h-1 rounded-lg ml-4 "></div></div>
+                </div>
+                <div class="group relative">
+                  <a href="#Veilles" class="z-20"><li class="ml-4 z-20"><p class="z-20 relative opacity-60 group-hover:opacity-100 duration-200 group-hover:font-bold">Veilles</p></li></a>
+                  <div class="flex justify-center"><div class="group-hover:w-full w-0 duration-500 bg-jaune h-1 rounded-lg ml-4 "></div></div>
+                </div>
+                <div class="group relative">
+                  <a href="#Contact" class="z-20"><li class="ml-4 z-20"><p class="z-20 relative opacity-60 group-hover:opacity-100 duration-200 group-hover:font-bold">Contact</p></li></a>
+                  <div class="flex justify-center"><div class="group-hover:w-full w-0 duration-500 bg-jaune h-1 rounded-lg ml-4 "></div></div>
+                </div>
+
+
+            </ul>
+
+             <!-- <button class="mt-3" onclick="english == !english; console.log(english)" *ngif="!english">EN</button>
+            <button class="mt-3" onclick="english == !english; console.log(english)" *ngif="english">FR</button>  -->
+            
+        </div>
+        <div class="desktop:hidden">
+          
+        </div>
+        </nav>
+
+        
+
+
+      </div>  
+    </div>
+  </header>
