feat: install animate.css

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,7 +20,7 @@
 
               
                 <div class="group relative">
-                  <a href="#About" class="z-20"><li class="ml-4 z-20"><p class="z-20 relative opacity-60 group-hover:opacity-100 duration-200 group-hover:font-bold">À propos</p></li></a>
+                  <a href="#About" class="z-20"><li class="ml-4 z-20"><p class="z-20 relative opacity-60 group-hover:opacity-100 duration-200 group-hover:font-bold">À propossss</p></li></a>
                   <div class="flex justify-center"><div class="group-hover:w-full w-0 duration-500 bg-jaune h-1 rounded-lg ml-4 "></div></div>
                 </div>  
                 <div class="group relative">
