feat: vantajs and top section (need to add fonts)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,7 +20,7 @@
 
               
                 <div class="group relative">
-                  <a href="#About" class="z-20"><li class="ml-4 z-20"><p class="z-20 relative opacity-60 group-hover:opacity-100 duration-200 group-hover:font-bold">À propossss</p></li></a>
+                  <a href="#About" class="z-20"><li class="ml-4 z-20"><p class="z-20 relative opacity-60 group-hover:opacity-100 duration-200 group-hover:font-bold">À propos</p></li></a>
                   <div class="flex justify-center"><div class="group-hover:w-full w-0 duration-500 bg-jaune h-1 rounded-lg ml-4 "></div></div>
                 </div>  
                 <div class="group relative">
@@ -54,3 +54,24 @@
       </div>  
     </div>
   </header>
+
+  <section id="top">
+    <!-- <parallax /> -->
+    <div class="absolute z-10 mt-56 phone:left-20 desktop:left-1/3">
+      <h1 class="desktop:py-4 text-transparent bg-clip-text bg-gradient-to-br from-blanc to-jaune font-swap text-center phone:text-xs desktop:text-2xl animate__animated animate__jackInTheBox">Welcome to <span class="font-bold"> <br /><br /><br /> Marwin RODRIGUES</span></h1>
+      <div class="flex justify-center">
+        <div class="desktop:py-1 desktop:px-5 mt-2 bg-jaune bg-opacity-40 rounded-full w-4/5 text-center animate__animated animate__zoomInUp"> <h3 class="text-blanc text-opacity-75 shadow-2xl shadow-black rounded-full phone:text-4xs desktop:text-3xs">WebMaster Junior</h3></div>
+      </div>
+      <div class="flex justify-center gap-10 mt-5 animate__animated animate__fadeIn">
+        <a href="https://github.com/Marwin-Rdgs" target="_blank"><img src="../assets/socials/github.png" alt="" class="hover:-translate-y-2 hover:duration-100 hover:scale-110"></a>
+        <a href="https://www.instagram.com/marwin.rdgs/" target="_blank"><img src="../assets/socials/instagram.png" alt="" class="hover:-translate-y-2 hover:duration-100 hover:scale-110"></a>
+        <a href="https://www.linkedin.com/in/marwin-rodrigues/" target="_blank"><img src="../assets/socials/linkedin.png" alt="" class="hover:-translate-y-2 hover:duration-100 hover:scale-110"></a>
+      </div>
+      <div class="flex justify-center mt-52 relative z-10">
+        <a href="#About"><img src="../assets/competences/down-chevron.png" alt="" class="animate-bounce"></a>
+      </div>
+    </div>
+    <div id="vantajs"  class="w-full h-[720px] z-0 animate__animated animate__fadeIn"></div>
+  </section>
+
+  <h2>fdsf</h2>
