--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -57,8 +57,8 @@
 
   <section id="top">
     <!-- <parallax /> -->
-    <div class="absolute z-10 mt-56 phone:left-20 desktop:left-1/3">
-      <h1 class="desktop:py-4 text-transparent bg-clip-text bg-gradient-to-br from-blanc to-jaune font-swap text-center phone:text-xs desktop:text-2xl animate__animated animate__jackInTheBox">Welcome to <span class="font-bold"> <br /><br /><br /> Marwin RODRIGUES</span></h1>
+    <div class="absolute z-10 mt-56 phone:left-10 desktop:left-1/3">
+      <h1 class="desktop:py-4 text-transparent bg-clip-text bg-gradient-to-br from-blanc to-jaune font-swap text-center phone:text-lg desktop:text-2xl animate__animated animate__jackInTheBox">Welcome to <span class="font-bold"> <br class="desktop:flex hidden"/> Marwin RODRIGUES</span></h1>
       <div class="flex justify-center">
         <div class="desktop:py-1 desktop:px-5 mt-2 bg-jaune bg-opacity-40 rounded-full w-4/5 text-center animate__animated animate__zoomInUp"> <h3 class="text-blanc text-opacity-75 shadow-2xl shadow-black rounded-full phone:text-4xs desktop:text-3xs">WebMaster Junior</h3></div>
       </div>
