--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,8 @@
+/* CarterOne */
+@import url('https://fonts.googleapis.com/css2?family=Carter+One&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=sans');
+
 /* You can add global styles to this file, and also import other style files */
 @tailwind base;
 @tailwind components;
