feat: add presentation part without clouds

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -74,4 +74,44 @@
     <div id="vantajs"  class="w-full h-[720px] z-0 animate__animated animate__fadeIn"></div>
   </section>
 
-  <h2>fdsf</h2>
+  <section id="About" class="mt-40">
+    <!-- <img src="../assets/nuage1.png" alt="" id="cloud" class="absolute hidden desktop:flex mt-10"> -->
+
+    <h1 class="text-transparent bg-clip-text bg-gradient-to-r from-blanc to-jaune phone:text-lg desktop:text-2xl desktop:mr-20 phone:text-center desktop:text-right font-swap py-4">PRÉSENTATION</h1>
+    
+   
+    <div class="flex justify-center">
+    <div class="desktop:grid desktop:grid-cols-2 mt-10">
+      <div class="grid-cols-1">
+        <div class="flex justify-center">
+          <img src="../assets/marwin.png" alt="" class="relative w-1/2 rounded-full z-10">
+        </div>
+        <div class="desktop:flex desktop:justify-center">
+          <div class="desktop:w-80 phone:w-32 absolute z-0 desktop:-mt-64 phone:-mt-40 desktop:h-72 phone:h-40 desktop:left-48 phone:left-32 rounded-full bg-jaune blur-lg"></div>
+        </div>
+      </div>
+      <div class="grid-cols-2">
+        <h2 class="desktop:text-lg phone:ml-2 desktop:ml-0">Marwin RODRIGUES</h2>
+        <h3 class="desktop:text-base text-jaune phone:ml-2 desktop:ml-0">WebMaster Junior</h3>
+
+        <p class="desktop:text-3xs phone:text-5xs text-opacity-75 mt-4 w-10/12 phone:ml-2 desktop:ml-0">Étudiant agé de 22 ans, actuellement en troisième année au <a href="#"><span class="text-jaune hover:underline hover:animate-pulse"> MMI Montbéliard </span></a> et apprentis développeur web chez <a href="#"><span class="text-jaune hover:underline hover:animate-pulse"> Forvia</span></a>. Passionné par le web, l'Animation et le football.</p>
+      
+        <ul class="theme-list mt-5 phone:ml-2 desktop:ml-0">
+            <li><b>Réside:</b> Montbéliard, FR</li>
+            <li><b>Age:</b> 22</li>
+            <li><b>Né:</b> 19/03/2001</li>
+            <li><b>Contact:</b> <a href="mailto:contact@marwin-rodrigues.fr" class="text-jaune hover:underline hover:animate-pulse"> contact@marwin-rodrigues.fr</a></li>
+          </ul>
+
+          <div class="flex justify-center desktop:w-1/2 mt-4">
+          <a href="/Marwin-RODRIGUES_CV.pdf" target="_blank"><button class="rounded-full border-2 border-jaune px-2 py-1 hover:bg-jaune hover:text-white hover:scale-110 duration-300">Voir mon CV</button></a>
+          </div>
+      
+        </div>
+      </div>
+    </div> 
+
+    <!-- <img src="../assets/nuage2.png" alt="" id="cloud" class="absolute right-56 w-1/12 z-0 hidden desktop:flex -mt-2">
+  <img src="../assets/nuage2.png" alt="" id="cloud" class="absolute right-64 -mt-12 w-2/12 z-0 hidden desktop:flex"> -->
+
+  </section>
