feat: add competences and edit animation & design

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -71,10 +71,10 @@
         <a href="#About"><img src="../assets/competences/down-chevron.png" alt="" class="animate-bounce"></a>
       </div>
     </div>
-    <div id="vantajs"  class="w-full h-[720px] z-0 animate__animated animate__fadeIn"></div>
+    <div id="vantajs"  class="w-full h-full z-0 animate__animated animate__fadeIn"></div>
   </section>
 
-  <section id="About" class="mt-40">
+  <section id="About" class="mt-10">
     <!-- <img src="../assets/nuage1.png" alt="" id="cloud" class="absolute hidden desktop:flex mt-10"> -->
 
     <h1 class="text-transparent bg-clip-text bg-gradient-to-r from-blanc to-jaune phone:text-lg desktop:text-2xl desktop:mr-20 phone:text-center desktop:text-right font-swap py-4">PRÉSENTATION</h1>
@@ -100,7 +100,7 @@
             <li><b>Réside:</b> Montbéliard, FR</li>
             <li><b>Age:</b> 22</li>
             <li><b>Né:</b> 19/03/2001</li>
-            <li><b>Contact:</b> <a href="mailto:contact@marwin-rodrigues.fr" class="text-jaune hover:underline hover:animate-pulse"> contact@marwin-rodrigues.fr</a></li>
+            <li><b>Contact: </b> <a href="mailto:contact@marwin-rodrigues.fr" class="text-jaune hover:underline hover:animate-pulse">contact@marwin-rodrigues.fr</a></li>
           </ul>
 
           <div class="flex justify-center desktop:w-1/2 mt-4">
@@ -115,3 +115,360 @@
   <img src="../assets/nuage2.png" alt="" id="cloud" class="absolute right-64 -mt-12 w-2/12 z-0 hidden desktop:flex"> -->
 
   </section>
+
+  <div class="mt-32 h-2 bg-jaune blur"></div>
+  <section id="Compet" class="border-t-2 bg-blanc bg-opacity-80 pb-8 pt-3 shadow-lg shadow-jaune">
+    <h1 class="text-transparent bg-clip-text bg-gradient-to-r from-noir to-jaune desktop:text-2xl desktop:mr-20 text-left font-swap">COMPÉTENCES</h1>
+
+
+    <div class="flex justify-center"><div class="grid desktop:grid-cols-4 desktop:gap-x-52 desktop:gap-y-4 phone:gap-y-16 mb-24">
+    
+      <!-- LANGAGE PROGRAMMATION  ========> Intégration Web(HTML / CSS / SCSS / Tailwind / Bootrstrap / Uikit)-->
+    <div class="group">
+      <div class="flex justify-center">
+        <div class="desktop:w-[400px] desktop:h-[300px] rounded-md bg-blanc bg-opacity-60 absolute scale-0 group-hover:scale-100 group-hover:translate-y-4 duration-700">
+          <div class="flex justify-center"><div class="grid desktop:grid-cols-3 gap-x-6 gap-y-14 py-6 mx-4 desktop:mt-12">
+          <!-- HTML -->
+          <div class="relative">
+            <div class="flex justify-center">
+              <img src="../assets/competences/html.png" alt="" class="w-[32px]">
+            </div>
+
+            <div class="flex justify-center">
+            <div class="px-1 bg-white border border-black desktop:absolute -mt-1 rounded-full">
+              <p class="text-center text-3xs text-white group-hover:text-black">HTML</p>
+            </div> </div>
+          </div>
+          <!-- CSS -->
+          <div class="relative">
+            <div class="flex justify-center">
+              <img src="../assets/competences/CSS.png" alt="" class="w-[32px]">
+            </div>
+
+            <div class="flex justify-center">
+            <div class="px-1 bg-white border border-black desktop:absolute -mt-1 rounded-full">
+              <p class="text-center text-3xs text-white group-hover:text-black">CSS</p>
+            </div> </div>
+          </div>
+          <!-- SCSS -->
+          <div class="relative mt-2">
+            <div class="flex justify-center">
+              <img src="../assets/competences/scss.png" alt="" class="w-[32px]">
+            </div>
+
+            <div class="flex justify-center">
+            <div class="px-1 bg-white border border-black desktop:absolute -mt-1 rounded-full">
+              <p class="text-center text-3xs text-white group-hover:text-black">SCSS</p>
+            </div> </div>
+          </div>
+          <!-- Tailwind -->
+          <div class="relative -mt-4">
+            <div class="flex justify-center">
+              <img src="../assets/competences/tailwind.png" alt="" class="w-[64px]">
+            </div>
+
+            <div class="flex justify-center">
+            <div class="px-1 bg-white border border-black desktop:absolute -mt-2 rounded-full">
+              <p class="text-center text-3xs text-white group-hover:text-black">Tailwind</p>
+            </div> </div>
+          </div>
+          <!-- Bootstrap -->
+          <div class="relative">
+            <div class="flex justify-center">
+              <img src="../assets/competences/Bootstrap.png" alt="" class="w-[48px]">
+            </div>
+
+            <div class="flex justify-center">
+            <div class="px-1 bg-white border border-black desktop:absolute -mt-1 rounded-full">
+              <p class="text-center text-3xs text-white group-hover:text-black">Bootstrap</p>
+            </div> </div>
+          </div>
+          <!-- Uikit -->
+          <div class="relative">
+            <div class="flex justify-center">
+              <img src="../assets/competences/uikit.png" alt="" class="w-[32px]">
+            </div>
+
+            <div class="flex justify-center">
+            <div class="px-1 bg-white border border-black desktop:absolute -mt-1 rounded-full">
+              <p class="text-center text-3xs text-white group-hover:text-black">Uikit</p>
+            </div> </div>
+          </div>
+
+
+          </div></div>
+        </div>
+      </div>
+      <div class="opacity-100 relative group-hover:opacity-5 duration-700 scale-75 group-hover:scale-50">
+        <div class="flex justify-center">
+        <img src="../assets/competences-categ/programmation.png" alt="" >
+        </div>
+        <h3 class="text-center text-lg">Intégration Web</h3>
+      </div>
+    </div>
+
+      <!-- FRAMEWORKS =====> Frontend Deveveloppement (Javascript / AngularJS / VueJS / ThreeJS / OpenWeatherMap / OpenStreetMap / ChartJS / EmotionCSS / Animation CSS / VantaJS / AlpineJS / AnimeJS) -->
+    <div class="group">
+      <div class="flex justify-center">
+        <div class="desktop:w-[400px] desktop:h-[300px] rounded-md bg-blanc bg-opacity-60 absolute scale-0 group-hover:scale-100 group-hover:translate-y-4 duration-700">
+          <div class="flex justify-center"><div class="grid desktop:grid-cols-3 gap-x-24 gap-y-11 py-6 px-8">
+        <!-- JavaScript -->
+        <div class="relative mt-2">
+            <div class="flex justify-center">
+              <img src="../assets/competences/js.png" alt="">
+            </div>
+
+            <div class="flex justify-center">
+            <div class="px-1 bg-white border border-black desktop:absolute -mt-1 rounded-full">
+              <p class="text-center text-3xs text-white group-hover:text-black">Javascript</p>
+            </div> </div>
+          </div>
+          <!-- Angular -->
+          <div class="relative">
+            <div class="flex justify-center">
+              <img src="../assets/competences/Angular.png" alt="" class="w-[48px]">
+            </div>
+
+            <div class="flex justify-center">
+            <div class="px-1 bg-white border border-black desktop:absolute -mt-1 rounded-full">
+              <p class="text-center text-3xs text-white group-hover:text-black">Angular</p>
+            </div> </div>
+          </div>
+          <!-- VueJS -->
+          <div class="relative mt-2">
+            <div class="flex justify-center">
+              <img src="../assets/competences/vuejs.png" alt="" class="w-[32px]">
+            </div>
+
+            <div class="flex justify-center">
+            <div class="px-1 bg-white border border-black desktop:absolute rounded-full">
+              <p class="text-center text-3xs text-white group-hover:text-black">Vue</p>
+            </div> </div>
+          </div>
+
+          <!-- ThreeJS -->
+          <div class="relative">
+            <div class="flex justify-center">
+              <img src="../assets/competences/Threejs.png" alt="" class="w-[48px]">
+            </div>
+
+            <div class="flex justify-center">
+            <div class="px-1 bg-white border border-black desktop:absolute -mt-1 rounded-full">
+              <p class="text-center text-3xs text-white group-hover:text-black">ThreeJS</p>
+            </div> </div>
+          </div>
+
+          <!-- ChartJS -->
+          <div class="relative">
+            <div class="flex justify-center">
+              <img src="../assets/competences/chartjs.png" alt="" class="w-[48px]">
+            </div>
+
+            <div class="flex justify-center">
+            <div class="px-1 bg-white border border-black desktop:absolute -mt-1 rounded-full">
+              <p class="text-center text-3xs text-white group-hover:text-black">ChartJS</p>
+            </div> </div>
+          </div>
+
+          <!-- AlpineJS -->
+          <div class="relative">
+            <div class="flex justify-center">
+              <img src="../assets/competences/alpine.png" alt="" class="w-[48px]">
+            </div>
+
+            <div class="flex justify-center">
+            <div class="px-1 bg-white border border-black desktop:absolute -mt-1 rounded-full">
+              <p class="text-center text-3xs text-white group-hover:text-black">AlpineJS</p>
+            </div> </div>
+          </div>
+
+          <!-- OpenStreetMap -->
+          <div class="relative">
+            <div class="flex justify-center">
+              <img src="../assets/competences/openstreetmap.png" alt="" class="w-[64px]">
+            </div>
+
+            <div class="flex justify-center">
+            <div class="px-1 bg-white border border-black desktop:absolute -mt-1 rounded-full">
+              <p class="text-center text-5xs text-white group-hover:text-black">OpenStreetMap</p>
+            </div> </div>
+          </div>
+
+          <!-- OpenWeatherMap -->
+          <div class="relative">
+            <div class="flex justify-center">
+              <img src="../assets/competences/openstreetmap.png" alt="" class="w-[64px]">
+            </div>
+
+            <div class="flex justify-center">
+            <div class="px-1 bg-white border border-black desktop:absolute -mt-1 rounded-full">
+              <p class="text-center text-5xs text-white group-hover:text-black">OpenWeatherMap</p>
+            </div> </div>
+          </div>
+
+          <!-- EmotionCSS -->
+          <div class="relative">
+            <div class="flex justify-center">
+              <img src="../assets/competences/openstreetmap.png" alt="" class="w-[64px]">
+            </div>
+
+            <div class="flex justify-center">
+            <div class="px-1 bg-white border border-black desktop:absolute -mt-1 rounded-full">
+              <p class="text-center text-5xs text-white group-hover:text-black">OpenWeatherMap</p>
+            </div> </div>
+          </div>
+
+          <!-- AnimateCSS -->
+          <div class="relative">
+            <div class="flex justify-center">
+              <img src="../assets/competences/openstreetmap.png" alt="" class="w-[64px]">
+            </div>
+
+            <div class="flex justify-center">
+            <div class="px-1 bg-white border border-black desktop:absolute -mt-1 rounded-full">
+              <p class="text-center text-5xs text-white group-hover:text-black">OpenWeatherMap</p>
+            </div> </div>
+          </div>
+
+          <!-- AlpineJS -->
+          <div class="relative">
+            <div class="flex justify-center">
+              <img src="../assets/competences/openstreetmap.png" alt="" class="w-[64px]">
+            </div>
+
+            <div class="flex justify-center">
+            <div class="px-1 bg-white border border-black desktop:absolute -mt-1 rounded-full">
+              <p class="text-center text-5xs text-white group-hover:text-black">OpenWeatherMap</p>
+            </div> </div>
+          </div>
+
+          <!-- AnimeJS -->
+          <div class="relative">
+            <div class="flex justify-center">
+              <img src="../assets/competences/openstreetmap.png" alt="" class="w-[64px]">
+            </div>
+
+            <div class="flex justify-center">
+            <div class="px-1 bg-white border border-black desktop:absolute -mt-1 rounded-full">
+              <p class="text-center text-5xs text-white group-hover:text-black">OpenWeatherMap</p>
+            </div> </div>
+          </div>
+
+
+          </div></div>
+        </div>
+      </div>
+      <div class="opacity-100 relative group-hover:opacity-5 duration-700 scale-75 group-hover:scale-50">
+        <img src="../assets/competences-categ/frameworks.png" alt="">
+        <h3 class="text-center text-lg">FrontEnd Developpement</h3>
+      </div>
+    </div>
+    
+
+      <!-- CMS  =========> Backend Developpement (PHP / .NET / NodeJS / PhpMyAdmin / Supabase / Firebase)-->
+    <div class="group">
+      <div class="flex justify-center z-10">
+        <div class="desktop:w-[400px] desktop:h-[300px] rounded-md bg-mdark absolute scale-0 group-hover:scale-100 group-hover:translate-y-4 duration-700">
+          <div class="flex justify-center"><div class="grid desktop:grid-cols-2 gap-x-24 gap-y-11 py-6 px-8 desktop:mt-20">
+          <!-- Wordpress -->
+          <div class="relative">
+            <div class="flex justify-center">
+              <img src="../assets/competences/wordpress.png" alt="" class="w-[32px]">
+            </div>
+
+            <div class="flex justify-center">
+            <div class="px-1 bg-white border border-black desktop:absolute -mt-1 rounded-full">
+              <p class="text-center text-3xs text-white group-hover:text-black">Wordpress</p>
+            </div> </div>
+          </div>
+          <!-- Wix -->
+          <div class="relative">
+            <div class="flex justify-center">
+              <img src="../assets/competences/wix.png" alt="" class="w-[48px]">
+            </div>
+
+            <div class="flex justify-center">
+            <div class="px-1 bg-white border border-black desktop:absolute -mt-1 rounded-full">
+              <p class="text-center text-3xs text-white group-hover:text-black">Wix</p>
+            </div> </div>
+          </div>
+
+
+          </div></div>
+        </div>
+      </div>
+      <div class="opacity-100 relative group-hover:opacity-5 duration-700 scale-75 group-hover:scale-50">
+        <img src="../assets/competences-categ/cms.png" alt="" >
+        <h3 class="text-center text-lg">BackEnd Developpement</h3>
+      </div>
+    </div>
+
+
+      <!-- BDD  ==========> Outils & Autres (Adobe Creative / Figma / Git / Github / Office 365 / Microsoft Power Platform / Wordpress / Wix / Trello / Blender / 3DS Max / Unreal Engine / Da Vinci Resolve / Wondershare Filmora / Python / VBA / Java )-->
+    <div class="group">
+      <div class="flex justify-center z-10">
+        <div class="desktop:w-[400px] desktop:h-[300px] rounded-md bg-mdark absolute scale-0 group-hover:scale-100 group-hover:translate-y-4 duration-700">
+          <div class="flex justify-center"><div class="grid desktop:grid-cols-3 gap-x-24 gap-y-11 py-6 px-8 desktop:mt-12">
+          <!-- Supabase -->
+          <div class="relative">
+            <div class="flex justify-center">
+              <img src="../assets/competences/supabase.png" alt="" class="w-[32px]">
+            </div>
+
+            <div class="flex justify-center">
+            <div class="px-1 bg-white border border-black desktop:absolute -mt-1 rounded-full">
+              <p class="text-center text-3xs text-white group-hover:text-black">Supabase</p>
+            </div> </div>
+          </div>
+          <!-- Firebase -->
+          <div class="relative">
+            <div class="flex justify-center">
+              <img src="../assets/competences/firebase.png" alt="" class="w-[32px]">
+            </div>
+
+            <div class="flex justify-center">
+            <div class="px-1 bg-white border border-black desktop:absolute -mt-1 rounded-full">
+              <p class="text-center text-3xs text-white group-hover:text-black">Firebase</p>
+            </div> </div>
+          </div>
+          <!-- PHPMyAdmin -->
+          <div class="relative">
+            <div class="flex justify-center">
+              <img src="../assets/competences/phpmyadmin.png" alt="" class="w-[32px]">
+            </div>
+
+            <div class="flex justify-center">
+            <div class="px-1 bg-white border border-black desktop:absolute -mt-1 rounded-full">
+              <p class="text-center text-4xs text-white group-hover:text-black">PhpMyAdmin</p>
+            </div> </div>
+          </div>
+
+          <!-- METTRE AU CENTRE -->
+          <div class="hidden desktop:flex"></div>
+
+          <!-- SQLLite -->
+          <div class="relative">
+            <div class="flex justify-center">
+              <img src="../assets/competences/sqlite.png" alt="" class="w-[32px]">
+            </div>
+
+            <div class="flex justify-center">
+            <div class="px-1 bg-white border border-black desktop:absolute -mt-1 rounded-full">
+              <p class="text-center text-4xs text-white group-hover:text-black">SQLLite</p>
+            </div> </div>
+          </div>
+
+          </div></div>
+        </div>
+      </div>
+      <div class="opacity-100 relative group-hover:opacity-5 duration-700 scale-75 group-hover:scale-50">
+        <img src="../assets/competences-categ/bdd.png" alt="" >
+        <h3 class="text-center text-lg">Outils & Autres</h3>
+      </div>
+    </div>
+    </div></div>
+
+
+  </section>
+
+  <h2>En cours de production</h2>
