feat: add parcours section

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -80,7 +80,7 @@
   left: -8px;
   width: 18px;
   height: 18px;
-  background-color: #75E8FF;
+  background-color: #f0a500;
   border: 3px solid #fff;
   border-radius: 50%;
 }
@@ -90,9 +90,9 @@
   padding: 6px 20px;
   color: #fff;
   font-weight: 500;
-  background-color: #106f945a;
+  background-color: #f0a500;
   border-width: 2px;
-  border-color: #75E8FF;
+  border-color: #000000;
   border-radius: 30px 0 60px 30px;
 }
 
