--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -443,7 +443,7 @@
           </div>
 
           <!-- METTRE AU CENTRE -->
-          <div class="hidden desktop:flex"></div>
+          <!-- <div class="hidden desktop:flex"></div> -->
 
           <!-- Firebase -->
           <div class="relative">
@@ -454,6 +454,18 @@
             <div class="flex justify-center">
             <div class="px-1 bg-white border border-black desktop:absolute -mt-1 rounded-full">
               <p class="text-center text-3xs text-white group-hover:text-black">Firebase</p>
+            </div> </div>
+          </div>
+
+          <!-- SQLlite -->
+          <div class="relative">
+            <div class="flex justify-center">
+              <img src="../assets/competences/sqlite.png" alt="" class="w-[48px]">
+            </div>
+
+            <div class="flex justify-center">
+            <div class="px-1 bg-white border border-black desktop:absolute -mt-1 rounded-full">
+              <p class="text-center text-3xs text-white group-hover:text-black">SQLLite</p>
             </div> </div>
           </div>
 
@@ -471,7 +483,7 @@
       <!-- BDD  ==========> Outils & Autres (Adobe Creative / Figma / Git / Github / Office 365 / Microsoft Power Platform / Wordpress / Wix / Trello / Blender / 3DS Max / Unreal Engine / Da Vinci Resolve / Wondershare Filmora / Python / VBA / Java )-->
     <div class="group">
       <div class="flex justify-center z-10">
-        <div class="desktop:w-[400px] desktop:h-[300px] rounded-md bg-mdark absolute scale-0 group-hover:scale-100 group-hover:translate-y-4 duration-700 desktop:top-[1330px]">
+        <div class="desktop:w-[400px] desktop:h-[300px] rounded-md bg-mdark absolute scale-0 group-hover:scale-100 group-hover:translate-y-4 duration-700 desktop:top-[1280px]">
           <div class="flex justify-center"><div class="grid desktop:grid-cols-3 gap-x-24 gap-y-11 py-6 px-8 desktop:mt-12">
           
             <!-- Adobe Creative -->
@@ -644,6 +656,18 @@
             </div> </div>
           </div>
 
+          <!-- OBS -->
+          <div class="relative">
+            <div class="flex justify-center">
+              <img src="../assets/competences/OBS.png" alt="" class="w-[48px]">
+            </div>
+
+            <div class="flex justify-center">
+            <div class="px-1 bg-white border border-black desktop:absolute -mt-1 rounded-full">
+              <p class="text-center text-xs text-white group-hover:text-black">OBS</p>
+            </div> </div>
+          </div>
+
           <!-- Python -->
           <div class="relative">
             <div class="flex justify-center">
@@ -681,7 +705,32 @@
           </div>
 
 
-          <!-- Trello / Blender / 3DS Max / Unreal Engine / Da Vinci Resolve / Wondershare Filmora / Python / VBA / Java  -->
+          <!-- VS Code -->
+          <div class="relative">
+            <div class="flex justify-center">
+              <img src="../assets/competences/vscode.png" alt="" class="w-[48px]">
+            </div>
+
+            <div class="flex justify-center">
+            <div class="px-1 bg-white border border-black desktop:absolute -mt-1 rounded-full">
+              <p class="text-center text-xs text-white group-hover:text-black">VSCode</p>
+            </div> </div>
+          </div>
+
+
+          <!-- PHPStorm -->
+          <div class="relative">
+            <div class="flex justify-center">
+              <img src="../assets/competences/PhpStorm.png" alt="" class="w-[48px]">
+            </div>
+
+            <div class="flex justify-center">
+            <div class="px-1 bg-white border border-black desktop:absolute -mt-1 rounded-full">
+              <p class="text-center text-xs text-white group-hover:text-black">PHPStorm</p>
+            </div> </div>
+          </div>
+
+
 
           </div></div>
         </div>
@@ -694,6 +743,105 @@
     </div></div>
 
 
+  </section>
+
+  <section id="Cursus" class="mt-4 shadow-lg shadow-jaune pb-4 z-10">
+    <h1 class="text-transparent bg-clip-text bg-gradient-to-r from-noir to-jaune desktop:text-2xl desktop:mr-20 text-right font-swap">PARCOURS</h1>
+
+    <div class="container pt-5 flex justify-center">
+      <div class="desktop:flex phone:grid justify-center gap-52">
+
+        <!-- SCOLAIRE -->
+        <div class="wow fadeInRight desktop:w-1/3">
+          <h2 class="fw-normal font-swap desktop:text-lg">Scolaire</h2>
+          <ul class="timeline mt-4 pr-md-5">
+            <li>
+              <div class="title">09/2021 à aujourd'hui</div>
+              <div class="details">
+                <h5>BUT MMI</h5>
+                <small class="fg-theme">mmi montbéliard</small>
+                <p>Formation aux métiers du web, spécialité <b>Développement Web & dispositifs intéractifs</b></p>
+              </div>
+              <!-- <div class="text-center wow fadeInUp">
+                <a href="https://marwin-rodrigues.fr/MMI/" target="_blank" class="btn btn-theme">Projets Réalisés en MMI</a>
+              </div> -->
+            </li>
+            <li>
+              <div class="title">09/2020 à 06/2021</div>
+              <div class="details">
+                <h5>BTS SIO</h5>
+                <small class="fg-theme">Lycée Condorcet, Belfort</small>
+                <p>Formé en Informatique en alternance, spécialité <br /> <b>SLAM</b> (Solution Logiciel, Application et Maintenance)</p>
+              </div>
+            </li>
+            <li>
+              <div class="title">09/2017 à 07/2020</div>
+              <div class="details">
+                <h5>BAC STI2D</h5>
+                <small class="fg-theme">Lycée Germaine Tillion, Montbéliard</small>
+                <p>Baccalauréat mention assez bien, spécialité <b>SIN</b> (Système d'Information et Numérique)</p>
+              </div>
+            </li>
+          </ul>
+        </div>
+
+
+        <!-- PRO -->
+        <div class="col-md-6 wow fadeInRight desktop:w-1/3" data-wow-delay="200ms">
+          <h2 class="fw-normal font-swap desktop:text-lg">Professionel</h2>
+          <ul class="timeline mt-4 pr-md-5">
+            <li>
+              <div class="title">05/2023 à aujourd'hui</div>
+              <div class="details">
+                <h5><b>Web Developper Freelancer</b></h5>
+                <small class="fg-theme">Chez Marwin Web</small>
+                <p>Création d'une entreprise individuelle spécialisée dans les services web, offrant des compétences en communication digitale, développement web, design web et audiovisuel</p>
+              </div>
+            </li>
+            <li>
+              <div class="title">09/2022 à aujourd'hui</div>
+              <div class="details">
+                <h5><b>Web developper apprentice</b></h5>
+                <small class="fg-theme">Forvia</small>
+                <p>Alternance chez Forvia en tant que Développeur Web, avec pour responsabilité la création d'applications web en utilisant des outils tels que Microsoft Power, AngularJS et .NET. J'ai également assumé les rôles de Chef de Projet, Analyste UX/UI, Webdesigner et Vidéaste lors de certaines missions</p>
+              </div>
+            </li>
+            <li>
+              <div class="title">08/2021 à aujourd'hui</div>
+              <div class="details">
+                <h5><b>Arbitrage évennementiel & CM</b></h5>
+                <small class="fg-theme">Ekalia</small>
+                <p>Expérience en tant qu'Arbitre Événementiel et Community Manager au sein de l'association Ekalia, organisatrice d'événements de jeux vidéo en ligne, conformément à la loi 1901</p>
+              </div>
+            </li>
+            <li>
+              <div class="title">09/2020 à 06/2021</div>
+              <div class="details">
+                <h5><b>Pilote Système d'Informations</b></h5>
+                <small class="fg-theme">Stellantis</small>
+                <p>Une année d alternance chez Stellantis en tant que Pilote Système d'Information, avec pour responsabilité la création de fichiers Excel comportant des macros développées en VBA</p>
+              </div>
+            </li>
+            <li>
+              <div class="title">09/2020 à Aujourd'hui</div>
+              <div class="details">
+                <h5><b>Initiation d’adolescent à la programmation</b></h5>
+                <!-- <small class="fg-theme">Stellantis</small> -->
+                <p>Encadrement et initiation à la programmation pour des groupes d'adolescents âgés d'environ 13 ans</p>
+              </div>
+            </li>
+            <li>
+              <div class="title">07/2019 à 07/2021</div>
+              <div class="details">
+                <h5><b>Modérateur, Gérant Statistiques et Suggestions et UI Designer</b></h5>
+                <small class="fg-theme">Ezaly</small>
+                <p>Gestion de micro-événements(2h), des statistiques, des suggestions des utilisateurs ainsi que designer l'ensemble des interface</p>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
   </section>
 
   <h2>En cours de production</h2>
