fix: update photo me

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -82,12 +82,17 @@
    
     <div class="flex justify-center">
     <div class="desktop:grid desktop:grid-cols-2 mt-10">
-      <div class="grid-cols-1">
+      <!-- <div class="grid-cols-1">
         <div class="flex justify-center">
           <img src="../assets/marwin.png" alt="" class="relative w-1/2 rounded-full z-10">
         </div>
         <div class="desktop:flex desktop:justify-center">
           <div class="desktop:w-80 phone:w-32 absolute z-0 desktop:-mt-64 phone:-mt-40 desktop:h-72 phone:h-40 desktop:left-48 phone:left-32 rounded-full bg-jaune blur-lg"></div>
+        </div>
+      </div> -->
+      <div class="grid-cols-1">
+        <div class="flex justify-center">
+          <img src="../assets/Me.png" alt="" class="relative phone:scale-100 desktop:scale-150 z-10">
         </div>
       </div>
       <div class="grid-cols-2">
