feat: add AnimateOnScroll

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,11 @@
+
+<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
+<script>
+  AOS.init();
+</script>
+
 <header class="sticky top-0 h-0 z-50">
   <div class="absolute py-14 w-full bg-blanc blur-3xl"></div>
     <div class="flex flex-wrap gap-56 relative">
@@ -92,11 +100,11 @@
       </div> -->
       <div class="grid-cols-1">
         <div class="flex justify-center">
-          <img src="../assets/Me.png" alt="" class="relative phone:scale-100 desktop:scale-150 z-10">
+          <img src="../assets/Me.png" alt="" class="relative phone:scale-75 desktop:scale-150 z-10">
         </div>
       </div>
       <div class="grid-cols-2">
-        <h2 class="desktop:text-lg phone:ml-2 desktop:ml-0">Marwin RODRIGUES</h2>
+        <h2 class="desktop:text-lg phone:ml-2 desktop:ml-0" >Marwin RODRIGUES</h2>
         <h3 class="desktop:text-base text-jaune phone:ml-2 desktop:ml-0">WebMaster Junior</h3>
 
         <p class="desktop:text-3xs phone:text-5xs text-opacity-75 mt-4 w-10/12 phone:ml-2 desktop:ml-0">Étudiant agé de 22 ans, actuellement en troisième année au <a href="#"><span class="text-jaune hover:underline hover:animate-pulse"> MMI Montbéliard </span></a> et apprentis développeur web chez <a href="#"><span class="text-jaune hover:underline hover:animate-pulse"> Forvia</span></a>. Passionné par le web, l'Animation et le football.</p>
@@ -122,7 +130,7 @@
   </section>
 
   <div class="mt-32 h-2 bg-jaune blur"></div>
-  <section id="Compet" class="border-t-2 bg-blanc bg-opacity-80 pb-8 pt-3 shadow-lg shadow-jaune">
+  <section id="Compet" class="border-t-2 bg-blanc bg-opacity-80 pb-8 pt-3 shadow-lg shadow-jaune" >
     <h1 class="text-transparent bg-clip-text bg-gradient-to-r from-noir to-jaune desktop:text-2xl desktop:mr-20 text-left font-swap">COMPÉTENCES</h1>
 
 
@@ -849,4 +857,12 @@
     </div>
   </section>
 
-  <h2>En cours de production</h2>
+
+<!-- Project -->
+  <section>
+    <h1 class="text-jaune desktop:text-2xl text-center font-swap font-extralight mt-10">Mes Projets</h1>
+
+
+  </section>
+
+  <h2 class="mt-20">En cours de production</h2>
