feat: add components bases for card project

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -862,6 +862,7 @@
   <section>
     <h1 class="text-jaune desktop:text-2xl text-center font-swap font-extralight mt-10">Mes Projets</h1>
 
+    <app-card-project />
 
   </section>
 
