feat: refonte Presentation Part

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -85,29 +85,17 @@
   <section id="About" class="mt-10">
     <!-- <img src="../assets/nuage1.png" alt="" id="cloud" class="absolute hidden desktop:flex mt-10"> -->
 
-    <h1 class="text-transparent bg-clip-text bg-gradient-to-r from-blanc to-jaune phone:text-lg desktop:text-2xl desktop:mr-20 phone:text-center desktop:text-right font-swap py-4">PRÉSENTATION</h1>
+    <h1 class="text-transparent bg-clip-text bg-gradient-to-r from-jaune to-blanc phone:text-lg desktop:text-2xl desktop:ml-20 phone:text-center desktop:text-left font-swap py-4">PRÉSENTATION</h1>
     
    
-    <div class="flex justify-center">
-    <div class="desktop:grid desktop:grid-cols-2 mt-10">
-      <!-- <div class="grid-cols-1">
-        <div class="flex justify-center">
-          <img src="../assets/marwin.png" alt="" class="relative w-1/2 rounded-full z-10">
-        </div>
-        <div class="desktop:flex desktop:justify-center">
-          <div class="desktop:w-80 phone:w-32 absolute z-0 desktop:-mt-64 phone:-mt-40 desktop:h-72 phone:h-40 desktop:left-48 phone:left-32 rounded-full bg-jaune blur-lg"></div>
-        </div>
-      </div> -->
-      <div class="grid-cols-1">
-        <div class="flex justify-center">
-          <img src="../assets/Me.png" alt="" class="relative phone:scale-75 desktop:scale-150 z-10">
-        </div>
-      </div>
-      <div class="grid-cols-2">
+    <div class="flex justify-center relative">
+    <div class="desktop:grid desktop:grid-cols-2 mt-10 list-item items-center">
+
+      <div class="grid-cols-2 desktop:ml-11 z-20">
         <h2 class="desktop:text-lg phone:ml-2 desktop:ml-0" >Marwin RODRIGUES</h2>
         <h3 class="desktop:text-base text-jaune phone:ml-2 desktop:ml-0">WebMaster Junior</h3>
 
-        <p class="desktop:text-3xs phone:text-5xs text-opacity-75 mt-4 w-10/12 phone:ml-2 desktop:ml-0">Étudiant agé de 22 ans, actuellement en troisième année au <a href="#"><span class="text-jaune hover:underline hover:animate-pulse"> MMI Montbéliard </span></a> et apprentis développeur web chez <a href="#"><span class="text-jaune hover:underline hover:animate-pulse"> Forvia</span></a>. Passionné par le web, l'Animation et le football.</p>
+        <p class="desktop:text-3xs phone:text-5xs text-opacity-75 mt-4 w-10/12 phone:ml-2 desktop:ml-0">Fraichement Diplômé d’un BUT MMI à <a href="#"><span class="text-jaune hover:underline hover:animate-pulse"> MMI Montbéliard </span></a>, je possède une expertise en développement web, communication digital & print, UX/UI, et programmation de jeux vidéo. Déterminé à évoluer en tant que développeur front-end, mon objectif est d'atteindre le poste de directeur de projet web. Motivé et prêt à contribuer à des projets web de haut niveau.</p>
       
         <ul class="theme-list mt-5 phone:ml-2 desktop:ml-0">
             <li><b>Réside:</b> Montbéliard, FR</li>
@@ -120,8 +108,16 @@
           <a href="/Marwin-RODRIGUES_CV.pdf" target="_blank"><button class="rounded-full border-2 border-jaune px-2 py-1 hover:bg-jaune hover:text-white hover:scale-110 duration-300">Voir mon CV</button></a>
           </div>
       
+      </div>
+
+            <div class="grid-cols-1">
+        <div class="flex justify-center">
+          <img src="../assets/Marwin.png" alt="" class="absolute desktop:scale-95 phone:w-1/2  phone:-bottom-60 phone:right-9 desktop:w-max desktop:-top-16 desktop:right-52">
         </div>
       </div>
+
+      </div>
+      <img src="../assets/wave_profil.svg" alt="" class="absolute z-10 w-full phone:-bottom-60">
     </div> 
 
     <!-- <img src="../assets/nuage2.png" alt="" id="cloud" class="absolute right-56 w-1/12 z-0 hidden desktop:flex -mt-2">
@@ -129,9 +125,8 @@
 
   </section>
 
-  <div class="mt-32 h-2 bg-jaune blur"></div>
-  <section id="Compet" class="border-t-2 bg-blanc bg-opacity-80 pb-8 pt-3 shadow-lg shadow-jaune" >
-    <h1 class="text-transparent bg-clip-text bg-gradient-to-r from-noir to-jaune desktop:text-2xl desktop:mr-20 text-left font-swap">COMPÉTENCES</h1>
+  <section id="Compet" class="bg-blanc bg-opacity-80 pb-8 pt-3 mt-52" >
+    <h1 class="text-transparent bg-clip-text bg-gradient-to-r from-jaune to-noir desktop:text-2xl desktop:mr-20 text-right font-swap">COMPÉTENCES</h1>
 
 
     <div class="flex justify-center"><div class="grid desktop:grid-cols-4 desktop:gap-x-24 desktop:gap-y-4 phone:gap-y-16 mb-24">
@@ -759,7 +754,7 @@
   </section>
 
   <section id="Cursus" class="mt-4 shadow-lg shadow-jaune pb-4 z-10">
-    <h1 class="text-transparent bg-clip-text bg-gradient-to-r from-noir to-jaune desktop:text-2xl desktop:mr-20 text-right font-swap">PARCOURS</h1>
+    <h1 class="text-transparent bg-clip-text bg-gradient-to-r from-jaune to-noir desktop:text-2xl desktop:ml-20 text-left font-swap">PARCOURS</h1>
 
     <div class="container pt-5 flex justify-center">
       <div class="desktop:flex phone:grid justify-center gap-52">
