--- a/src/app/card-project/card-project.component.html
+++ b/src/app/card-project/card-project.component.html
@@ -10,6 +10,7 @@
 
         <!-- Description -->
         <div class="absolute z-50 w-1.5">
+            <div class="w-full h-full bg-blue"></div>
             <p>Description Project</p>
         </div>
 
