feat: add footer

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -995,4 +995,53 @@
 
   </section>
 
+
+  <!-- Stats -->
+
+
+  <!-- Veille Technologique -->
+
+
+  <!-- Footer -->  
   <h2 class="mt-20">En cours de production</h2>
+
+  <footer class="mt-40">
+
+    <!-- NE PAS TOUCHER -->
+    <div class="waves">
+        <div class="wave" id="wave1"></div>
+        <div class="wave" id="wave2"></div>
+        <div class="wave" id="wave3"></div>
+        <div class="wave" id="wave4"></div>
+    </div>
+    
+    <!-- Liste des icônes pour les réseaux sociaux -->
+    <!-- IMPORTANT : N'oubliez d'insérer les liens de vos réseaux à la place des "#" -->
+    
+        <!-- Si vous souhaitez retirer un réseau, supprimer entière une ligne ci-dessous -->
+    
+        <!-- Si vous souhaitez ajouter un réseau, rajouter une ligne comme celles ci-dessous, en remplaçant les balises "ion-icon" par des balises
+                                trouvables sur ce site : https://ionic.io/ionicons (Vous cherchez une icône, cliquez sur une, puis coller le code) -->
+    <ul class="social_icon gap-4">
+    
+        <!-- Icône Facebook -->
+        <li><a href="https://github.com/Marwin-Rdgs" target="_blank"> <img src="../assets/socials/github.png" alt="" class="text-white"> </a></li>
+        <li><a href="https://www.linkedin.com/in/marwin-rodrigues/" target="_blank"> <img src="../assets/socials/linkedin.png" alt="" class="text-white"> </a></li>
+        <li><a href="https://www.instagram.com/marwin.rdgs/" target="_blank"> <img src="../assets/socials/instagram.png" alt="" class="text-white"> </a></li>
+    
+    </ul>
+    
+    
+    <!-- liste des pages, représentant alors un menu du Footer -->
+    <!-- IMPORTANT : N'oubliez d'insérer les liens de vos pages à la place des "#" -->
+    <ul class="menu">
+        <li><a href="#">Projets</a></li>
+        <li><a href="#">Veilles</a></li>
+        <li><a href="#">À propos</a></li>
+        <li><a href="#">Contact</a></li>
+    </ul>
+    
+    <!-- Vous trouverez ici la "mention légale" -->
+    <p>Copyright © 2024 Marwin RODRIGUES</p>
+    
+    </footer>
